# fd-django-accounts

./: .bumpversion.cfg  .coveragerc.test.ini  .example.env  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  docker-compose.test.yml  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  requirements_release.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: ci-cd.yaml  ci.yaml  dependency-review.yaml  deploy.yaml  release.yaml
docs/: conf.py  index.rst  installation.rst  project-maintenance.rst  usage.rst
fd_accounts/: __init__.py  apps.py  auth_backends.py  models.py
fd_accounts/fixtures/: regular.json
fd_accounts/migrations/: 0001_initial.py
fd_accounts/tests/: factories.py  test_factories.py  test_models.py  utils.py
fd_dj_accounts/: __init__.py  apps.py  auth_backends.py  base_models.py  models.py  urls.py  views.py
fd_dj_accounts/fixtures/: regular.json
fd_dj_accounts/management/: __init__.py
fd_dj_accounts/management/commands/: createsuperuser.py
fd_dj_accounts/migrations/: 0001_initial.py
fd_dj_accounts/tests/: test_auth_backends.py
src/fd_dj_accounts/: __init__.py  admin.py  apps.py  auth_backends.py  base_models.py  models.py  urls.py  views.py
src/tests/: settings.py  test_admin.py  test_models.py  test_signals.py  urls.py
tests/: factories.py  settings.py  test_apps.py  test_auth_backends.py  test_factories.py  test_management.py  test_models.py  urls.py
